# ejercicios-2020-rmarku

./: CMakeLists.txt
Repaso/: CMakeLists.txt
Repaso/ej1/: main.cpp
Repaso/ej4/: main.cpp
U01_Recursividad/: CMakeLists.txt  SFML.cmake
U01_Recursividad/Ej-01/: main.cpp  potencia.cpp
U01_Recursividad/Extra-Laberinto/: main.cpp
U02_Listas/: CMakeLists.txt
U02_Listas/Ej-01/: fnInvierte.h  main.cpp
U02_Listas/Ej-02/: main.cpp
U02_Listas/Ej-03/: main.cpp
U02_Listas/Ej-04/: main.cpp  union.h
U02_Listas/Ej-06/: main.cpp
U02_Listas/Lista/: List.h  Node.h  README.md  mainlista.cpp
U03_Pilas/: CMakeLists.txt
U03_Pilas/Ej-01/: main.cpp
U03_Pilas/Ej-02/: main.cpp
U03_Pilas/Ej-03/: main.cpp
U03_Pilas/Ej-04/: main.cpp
U03_Pilas/Ej-05/: main.cpp
U03_Pilas/Ejemplo/: ejemplo1.cpp  ejemplo2.cpp
U03_Pilas/Pila/: Node.h  README.md  Stack.h
U04_Colas/: CMakeLists.txt
U04_Colas/Cola/: Node.h  Queue.h  README.md  mainCola.cpp
U04_Colas/Ej-01/: main.cpp
U04_Colas/Ej-02/: main.cpp
U04_Colas/Ej-03/: main.cpp
U04_Colas/Ej-04/: main.cpp
U04_Colas/Ej-05/: main.cpp
U05_Hash/: CMakeLists.txt
U05_Hash/HashMap/: HashMapTree.h  main.cpp  mainArg.cpp
U06_Arbol/: CMakeLists.txt
U06_Arbol/Arbol/: AVLTree.h  BinaryTree.h  TreeNode.h  main.cpp
U07_Grafos/: CMakeLists.txt
U07_Grafos/Grafo/: main.cpp
U08_Ordenamiento/: README.md
U08_Ordenamiento/Ej-03/: main.cpp
U09_Busqueda/: README.md
test/: CMakeLists.txt
test/U02_Listas/: Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp  Ej06.cpp  List.cpp
test/U03_Pilas/: Ej01.cpp  Ej02.cpp  (+4 more)
(+10 files in other folders)
