add_executable(U03-E01 Ej-01/main.cpp Pila/Stack.h)

add_executable(U03-E02 Ej-02/main.cpp)

add_executable(U03-E03 Ej-03/main.cpp)

add_executable(U03-E04 Ej-04/main.cpp)

add_executable(U03-E05 Ej-05/main.cpp)
add_executable(ejPolaca Ejemplo/ejemplo2.cpp)
add_executable(ejPolaca2 Ejemplo/ejemplo1.cpp)
